added hide low rank tweets feature

--- a/options.html
+++ b/options.html
@@ -9,6 +9,9 @@
   <label for="apiKey">OpenAI API Key:</label>
   <input type="password" id="apiKey" />
   <button id="save">Save</button>
+  <hr>
+  <label for="hideLowRankTweets">Hide low rank tweets (below 3):</label>
+  <input type="checkbox" id="hideLowRankTweets" />
   <script src="options.js"></script>
 </body>
 </html>
