--- a/popup.html
+++ b/popup.html
@@ -26,6 +26,7 @@
       <input type="checkbox" id="colorfulRanks" checked />
       <label for="colorfulRanks">Use colorful ranks</label>
     </div>
+    <button id="pauseResume">Pause Ranking</button>
     <button id="save">Save</button>
   </div>
   <script src="popup.js"></script>
