--- a/popup.html
+++ b/popup.html
@@ -9,40 +9,64 @@
 <body>
   <div class="container">
     <h1>Settings</h1>
-    <label for="apiKey">Google AI Studio API Key: <a href="https://aistudio.google.com/app/apikey" target="_blank" class="link">(Get your API key)</a></label>
-    <input type="text" id="apiKey" placeholder="Enter your API key" />
     
-    <h2>Ranking Criteria</h2>
-    <div class="criteria-container">
-      <div id="criteria-list">
-        <!-- Criteria items will be added here dynamically -->
+    <div class="section">
+      <div class="api-key-container">
+        <h2>API Key</h2>
+        <a href="https://aistudio.google.com/app/apikey" target="_blank" class="api-key-link">
+          <i class="fas fa-external-link-alt"></i>
+          Get your API key
+        </a>
       </div>
-      <button id="add-criteria" class="secondary-button">
-        <i class="fas fa-plus"></i> Add New Criterion
-      </button>
-    </div>
-    <div class="criteria-help">
-      <i class="info-icon">i</i>
-      <span>Criteria are used to evaluate tweets. Higher weights mean more importance in the final score.</span>
+      <div class="api-key-input-container">
+        <input type="text" 
+               id="apiKey" 
+               class="hide-text"
+               placeholder="Paste your Google AI Studio API key" 
+               autocomplete="off" 
+               spellcheck="false" />
+        <button class="toggle-api-visibility" title="Toggle visibility">
+          <i class="fas fa-eye"></i>
+        </button>
+      </div>
     </div>
 
-    <label for="hideLowRankTweets">Hide tweets with rank equal to or below:</label>
-    <select id="hideLowRankTweets" style="visibility: hidden;">
-      <option value="0">Do not hide any tweets</option>
-      <option value="1">1</option>
-      <option value="2">2</option>
-      <option value="3">3</option>
-      <option value="4">4</option>
-      <option value="5">5</option>
-      <option value="6">6</option>
-      <option value="7">7</option>
-      <option value="8">8</option>
-      <option value="9">9</option>
-    </select>
-    <div class="colorful-ranks-container">
-      <input type="checkbox" id="colorfulRanks" checked />
-      <label for="colorfulRanks">Use colorful ranks</label>
+    <div class="section">
+      <h2>Ranking Criteria</h2>
+      <div class="criteria-help">
+        <span>Criteria are used to evaluate tweets. Higher weights mean more importance in the final ranking score.</span>
+      </div>
+      <div class="criteria-container">
+        <div id="criteria-list">
+          <!-- Criteria items will be added here dynamically -->
+        </div>
+        <button id="add-criteria" class="secondary-button">
+          <i class="fas fa-plus"></i> Add New Criterion
+        </button>
+      </div>
     </div>
+
+    <div class="section">
+      <h2>Display Settings</h2>
+      <label for="hideLowRankTweets">Hide tweets with rank equal to or below:</label>
+      <select id="hideLowRankTweets">
+        <option value="0">Do not hide any tweets</option>
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+        <option value="6">6</option>
+        <option value="7">7</option>
+        <option value="8">8</option>
+        <option value="9">9</option>
+      </select>
+      <div class="colorful-ranks-container">
+        <input type="checkbox" id="colorfulRanks" checked />
+        <label for="colorfulRanks">Use colorful ranks</label>
+      </div>
+    </div>
+
     <button id="save">Save</button>
     <button id="pauseResume">Pause Ranking</button>
   </div>
