--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,10 @@
 </head>
 <body>
   <div class="container">
-    <h1>Settings</h1>
+    <div class="title-container">
+      <h1>Settings</h1>
+      <img src="images/icon32.png" alt="Judge Icon" class="title-icon">
+    </div>
     
     <div class="section">
       <div class="api-key-container">
@@ -21,7 +24,6 @@
       <div class="api-key-input-container">
         <input type="text" 
                id="apiKey" 
-               class="hide-text"
                placeholder="Paste your Google AI Studio API key" 
                autocomplete="off" 
                spellcheck="false" />
