--- a/popup.html
+++ b/popup.html
@@ -19,7 +19,7 @@
         <select id="modelSelect" class="model-select">
           <option value="gemini-1.5-flash-latest">Gemini 1.5 Flash (Free)</option>
           <option value="gpt-3.5-turbo">GPT-3.5 Turbo</option>
-          <option value="gpt-4">GPT-4</option>
+          <option value="gpt-4o-mini">GPT-4o Mini</option>
         </select>
         <a href="#" id="apiKeyLink" target="_blank" class="api-key-link">
           <i class="fas fa-external-link-alt"></i>
