--- a/popup.html
+++ b/popup.html
@@ -17,9 +17,9 @@
       <div class="api-key-container">
         <h2>Model Settings</h2>
         <select id="modelSelect" class="model-select">
-          <option value="gemini-1.5-flash-latest">Gemini 1.5 Flash (Free)</option>
-          <option value="gpt-3.5-turbo">GPT-3.5 Turbo</option>
-          <option value="gpt-4o-mini">GPT-4o Mini</option>
+          <option value="gemini-1.5-flash-latest">gemini-1.5-flash (free)</option>
+          <option value="gpt-4o-mini">gpt-4o-mini</option>
+          <option value="gpt-4o">gpt-4o</option>
         </select>
         <a href="#" id="apiKeyLink" target="_blank" class="api-key-link">
           <i class="fas fa-external-link-alt"></i>
