added button for full settings page

--- a/popup.html
+++ b/popup.html
@@ -79,6 +79,10 @@
 
     <button id="save">Save</button>
     <button id="pauseResume">Pause Ranking</button>
+    
+    <a href="#" id="openFullSettings" class="full-settings-link">
+      <i class="fas fa-external-link-alt"></i> Open settings in full screen
+    </a>
   </div>
   <script src="popup.js"></script>
 </body>
